[package]
name = "btlescan"
version = "0.1.2"
edition = "2021"

[dependencies]
btleplug = "0.11"
ratatui = "0.26"
tokio = { version = "1", features = ["full"] }
crossterm = "0.22"
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }