[package]
name = "btlescan"
version = "1.1.0"
edition = "2021"

[features]
server = ["ble-peripheral-rust"]

[dependencies]
btleplug = "0.11"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
crossterm = "0.29"
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ble-peripheral-rust = { version = "0.2", optional = true }