[package]
name = "btlescan"
version = "1.1.2"
edition = "2021"
description = "A cross-platform terminal UI for scanning Bluetooth Low Energy devices, inspecting GATT services and characteristics, and reading/writing characteristic values in real time."
license = "MIT"
repository = "https://github.com/ztroop/btlescan"
homepage = "https://github.com/ztroop/btlescan"
documentation = "https://github.com/ztroop/btlescan"
keywords = ["bluetooth", "ble", "tui", "gatt", "terminal"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    "assets/*",
]

[features]
server = ["ble-peripheral-rust"]

[dependencies]
btleplug = "0.11"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
crossterm = "0.29"
futures = "0.3"
chrono = "0.4"
uuid = "1.6"
lazy_static = "1.4.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
ble-peripheral-rust = { version = "0.2", optional = true }